# hasznaltauto_viz

./: .gitignore  Dockerfile  README.md  app.py  model.py  plotter.py  pyproject.toml  scraper.py
hasznaltauto_scraper/: app.py  data_validation.py  k-fold_model.py  model.py  plotter.py  scraper.py
hasznaltauto_scraper/static/: script.js  styles.css
hasznaltauto_scraper/templates/: error.html  index.html  result.html
static/: styles.css
templates/: index.html  result.html
