[tool.poetry]
name = "hasznaltauto-viz"
version = "0.1.0"
description = "Visualize car ads from hasznaltauto.com"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.1.0"
plotly = "^5.16.1"
datetime = "^5.2"
beautifulsoup4 = "^4.12.2"
requests = "^2.31.0"
scikit-learn = "^1.3.0"
flask = "^2.3.3"
appinsights = "^0.13.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
